--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-TWITCH_BOT_USERNAME = "xddratbot3"
-TWITCH_OAUTH_TOKEN = "pe1vvqoprkxjrsceqfbt3d4qwyq59j"
+// TWITCH_BOT_USERNAME = "xddratbot3"
+// TWITCH_OAUTH_TOKEN = "pe1vvqoprkxjrsceqfbt3d4qwyq59j"
+
+TWITCH_BOT_USERNAME = "xddratbot2"
+TWITCH_OAUTH_TOKEN = "427dlz9fvo1vstr6zksh1j1ahjvfad"
 
 RIOT_API_KEY = "RGAPI-6697c03e-d7ea-4ac0-951c-e6b6e89994b4"
