--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-// TWITCH_BOT_USERNAME = "xddratbot3"
-// TWITCH_OAUTH_TOKEN = "pe1vvqoprkxjrsceqfbt3d4qwyq59j"
+# TWITCH_BOT_USERNAME = "xddratbot3"
+# TWITCH_OAUTH_TOKEN = "pe1vvqoprkxjrsceqfbt3d4qwyq59j"
 
 TWITCH_BOT_USERNAME = "xddratbot2"
 TWITCH_OAUTH_TOKEN = "427dlz9fvo1vstr6zksh1j1ahjvfad"
